dex.audit: refactor: клиент и сервер размещены по папкам

--- a/src/Dex.Audit/Dex.Audit.EF/Dex.Audit.EF.csproj
+++ b/src/Dex.Audit/Dex.Audit.EF/Dex.Audit.EF.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Audit.Client\Dex.Audit.Client.csproj" />
+      <ProjectReference Include="..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
