--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
       <ProjectReference Include="..\..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
     </ItemGroup>
 
