--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
@@ -8,8 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
         <ProjectReference Include="..\..\Dex.Audit.EF\Dex.Audit.EF.csproj" />
         <ProjectReference Include="..\..\Dex.Audit.Server\Dex.Audit.Server.csproj"/>
+        <ProjectReference Include="..\..\Server\Dex.Audit.Server\Dex.Audit.Server.csproj" />
         <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj" />
     </ItemGroup>
 
