dex.audit: refactor: дополнительные библиотеки вынесены в отдельные папки

--- a/src/Dex.Audit/AdditionalLibraries/Dex.Audit.EF/Dex.Audit.EF.csproj
+++ b/src/Dex.Audit/AdditionalLibraries/Dex.Audit.EF/Dex.Audit.EF.csproj
@@ -7,6 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
       <ProjectReference Include="..\..\Domain\Dex.Audit.Domain\Dex.Audit.Domain.csproj" />
     </ItemGroup>
 
