--- a/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Logger/Dex.Audit.Logger.csproj
+++ b/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Logger/Dex.Audit.Logger.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
+      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
