--- a/src/Dex.Audit/Client/Dex.Audit.Client.Grpc/Dex.Audit.Client.Grpc.csproj
+++ b/src/Dex.Audit/Client/Dex.Audit.Client.Grpc/Dex.Audit.Client.Grpc.csproj
@@ -8,13 +8,12 @@
 
     <ItemGroup>
       <PackageReference Include="Google.Protobuf" Version="3.27.3" />
-      <PackageReference Include="Grpc.AspNetCore.Server.ClientFactory" Version="2.65.0" />
+      <PackageReference Include="Grpc.Net.ClientFactory" Version="2.65.0" />
       <PackageReference Include="Grpc.Net.Client" Version="2.65.0" />
       <PackageReference Include="Grpc.Tools" Version="2.65.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     </ItemGroup>
 
     <ItemGroup>
