--- a/src/Dex.Audit/Server/Dex.Audit.Server.Abstractions/Dex.Audit.Server.Abstractions.csproj
+++ b/src/Dex.Audit/Server/Dex.Audit.Server.Abstractions/Dex.Audit.Server.Abstractions.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.Audit.Domain\Dex.Audit.Domain.csproj" />
+      <ProjectReference Include="..\..\Domain\Dex.Audit.Domain\Dex.Audit.Domain.csproj" />
     </ItemGroup>
 
 </Project>
