dex.audit: feature: добавлена реализация обновления настроек не по grpc

--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
@@ -26,4 +26,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application\" />
+    </ItemGroup>
+
 </Project>
