--- a/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
+++ b/src/Dex.Events/Tests/Dex.Events.Distributed.Tests/Dex.Events.Distributed.Tests.csproj
@@ -6,8 +6,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dex.Cap.Outbox.Ef" Version="2.3.5" />
-        <PackageReference Include="Dex.MassTransit.Rabbit" Version="2.1.30" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12">
           <TreatAsUsed>true</TreatAsUsed>
@@ -31,6 +29,8 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.Events.Distributed\Dex.Events.Distributed.csproj" />
       <ProjectReference Include="..\..\Dex.Events.Distributed.OutboxExtensions\Dex.Events.Distributed.OutboxExtensions.csproj" />
+      <ProjectReference Include="..\..\..\Dex.Cap\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj" />
+      <ProjectReference Include="..\..\..\Dex.MassTransit\Dex.MassTransit.Rabbit\Dex.MassTransit.Rabbit.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
