--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Shared/Dex.Audit.Sample.Shared.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
       <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="10.2.0" />
     </ItemGroup>
 
