--- a/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Client.Grpc/Dex.Audit.Client.Grpc.csproj
+++ b/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Client.Grpc/Dex.Audit.Client.Grpc.csproj
@@ -21,8 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
-      <ProjectReference Include="..\Dex.Audit.Client\Dex.Audit.Client.csproj" />
+      <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
+      <ProjectReference Include="..\..\Client\Dex.Audit.Client\Dex.Audit.Client.csproj" />
     </ItemGroup>
 
 </Project>
