--- a/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Server.Grpc/Dex.Audit.Server.Grpc.csproj
+++ b/src/Dex.Audit/AdditionalLibraries/Dex.Audit.Server.Grpc/Dex.Audit.Server.Grpc.csproj
@@ -22,7 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
-      <ProjectReference Include="..\Dex.Audit.Server.Abstractions\Dex.Audit.Server.Abstractions.csproj" />
-      <ProjectReference Include="..\Dex.Audit.Server\Dex.Audit.Server.csproj" />
+      <ProjectReference Include="..\..\Server\Dex.Audit.Server.Abstractions\Dex.Audit.Server.Abstractions.csproj" />
+      <ProjectReference Include="..\..\Server\Dex.Audit.Server\Dex.Audit.Server.csproj" />
     </ItemGroup>
 </Project>
