dex.audit: fix: оповещение клиентов обернуто в try catch

--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Client.Grpc\Dex.Audit.Client.Grpc.csproj" />
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.EF\Dex.Audit.EF.csproj" />
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Logger\Dex.Audit.Logger.csproj" />
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
