--- a/src/Dex.Cap/Dex.Cap.Outbox.QuartzHandler/Dex.Cap.Outbox.AspNetScheduler.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.QuartzHandler/Dex.Cap.Outbox.AspNetScheduler.csproj
@@ -24,13 +24,16 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions"/>
         <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     </ItemGroup>
     <!--/Для NuGet-->
 
     <ItemGroup>
         <ProjectReference Include="..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions"/>
     </ItemGroup>
 
 </Project>
