--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -25,8 +25,10 @@
     <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.10" />
     <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.10" />
     <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
