--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,9 +1,9 @@
 <Project>
 
   <PropertyGroup>
-    <FrameworkVersion>6.0.29</FrameworkVersion>
-    <EntityFrameworkVersion>6.0.29</EntityFrameworkVersion>
-    <ExtensionsVersion>[8.0.0,8.0.4]</ExtensionsVersion>
+    <FrameworkVersion>8.0.10</FrameworkVersion>
+    <EntityFrameworkVersion>7.0.20</EntityFrameworkVersion>
+    <ExtensionsVersion>[8.0.0,8.0.10]</ExtensionsVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,28 +12,32 @@
 
     <!--tests -->
     <PackageReference Update="coverlet.collector" Version="6.0.2" />
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Update="NUnit" Version="3.14.0" />
-    <PackageReference Update="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Update="NUnit.Analyzers" Version="4.2.0" />
+    <PackageReference Update="NUnit3TestAdapter" Version="4.6.0" />
+    <PackageReference Update="NUnit.Analyzers" Version="4.3.0" />
 
     <!--microsoft extensions -->
     <PackageReference Update="Microsoft.Extensions.*" Version="$(ExtensionsVersion)" />
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
 
-    <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.10" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.10" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     
     <!--misc -->
-    <PackageReference Update="Npgsql" Version="6.0.11" />
-    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
-    <PackageReference Update="Neo4jClient" Version="5.1.15" />
-    <PackageReference Update="MassTransit*" Version="8.2.3" />
-    <PackageReference Update="MassTransit.TestFramework" Version="8.0.12" />
+    <PackageReference Update="Npgsql" Version="7.0.8" />
+    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.18" />
+    <PackageReference Update="Neo4jClient" Version="5.1.16" />
+    <PackageReference Update="MassTransit*" Version="8.2.5" />
+    <PackageReference Update="MassTransit.TestFramework" Version="8.0.16" />
     
     <!--microsoft asp.net core -->
     <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
