--- a/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityTokenProvider/Dex.SecurityTokenProvider.csproj
@@ -7,7 +7,7 @@
         <LangVersion>default</LangVersion>
         <PackageTags>security token management, dataprotection</PackageTags>
         <InformationalVersion>6.0</InformationalVersion>
-        <PackageVersion>6.0.0</PackageVersion>
+        <PackageVersion>6.0.1</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -24,6 +24,9 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+    </ItemGroup>
     <!--/Для NuGet-->
 
     <ItemGroup>
