--- a/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
+++ b/src/Dex.Cap/Dex.Cap.Common.Ef/Dex.Cap.Common.Ef.csproj
@@ -6,7 +6,7 @@
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <PackageTags>shared exceptions, extentions and helpers</PackageTags>
         <InformationalVersion>6.0</InformationalVersion>
-        <PackageVersion>6.0.0</PackageVersion>
+        <PackageVersion>6.0.1</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -24,9 +24,12 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
-    <!--/Для NuGet-->
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+    </ItemGroup>
+    <!--/Для NuGet-->
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
     </ItemGroup>
 
