--- a/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox.Neo4j/Dex.Cap.Outbox.Neo4j.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <PackageTags>outbox business-transaction consistency NEO4J implementation</PackageTags>
         <InformationalVersion>6.0</InformationalVersion>
-        <PackageVersion>6.0.1</PackageVersion>
+        <PackageVersion>6.0.2</PackageVersion>
         <VersionSuffix>alpha</VersionSuffix>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
@@ -22,11 +22,15 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+    </ItemGroup>
     <!--Для NuGet-->
 
     <ItemGroup>
         <ProjectReference Include="..\Dex.Cap.Outbox\Dex.Cap.Outbox.csproj"/>
     </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Neo4jClient"/>
     </ItemGroup>
