--- a/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
+++ b/src/Dex.SecurityToken/Tests/Dex.SecurityTokenProviderTests/Dex.SecurityTokenProviderTests.csproj
@@ -9,24 +9,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="6.0.12" />
-      <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="6.0.12" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.12" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" />
+      <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-      <PackageReference Include="xunit" Version="2.8.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" />
+      <PackageReference Include="xunit" />
     </ItemGroup>
-
-
-    <ItemGroup>
-        <Reference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" />
-        <Reference Include="Microsoft.EntityFrameworkCore.InMemory" />
-        <Reference Include="Microsoft.EntityFrameworkCore.SqlServer" />
-        <Reference Include="Microsoft.Extensions.DependencyInjection" />
-        <Reference Include="Microsoft.Extensions.Logging.Console" />
-    </ItemGroup>
-
 
     <ItemGroup>
       <ProjectReference Include="..\..\Dex.SecurityToken.DistributedStorage\Dex.SecurityToken.DistributedStorage.csproj" />
