--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -24,11 +24,13 @@
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
 
     <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.10" />
+    <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.10" />
@@ -56,6 +58,16 @@
 	<PackageReference Update="Dex.Types" Version="1.0.26" />
 	<PackageReference Update="Dex.Extensions" Version="1.0.30" />
 	<PackageReference Update="Dex.Neo4J" Version="1.1.31" />
+
+    <!--grpc libs -->
+    <PackageReference Update="Google.Protobuf" Version="3.28.2" />
+    <PackageReference Update="Grpc.Net.ClientFactory" Version="2.66.0" />
+    <PackageReference Update="Grpc.Net.Client" Version="2.66.0" />
+    <PackageReference Update="Grpc.Tools" Version="2.67.0" />
+    <PackageReference Update="Grpc.AspNetCore.Server" Version="2.66.0" />
+
+    <!--mediatr -->
+    <PackageReference Update="MediatR" Version="12.4.1" />
 
   </ItemGroup>
 </Project>
