--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Client.Grpc\Dex.Audit.Client.Grpc.csproj" />
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.EF\Dex.Audit.EF.csproj" />
+        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.EF.Interceptors\Dex.Audit.EF.Interceptors.csproj" />
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Logger\Dex.Audit.Logger.csproj" />
         <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
         <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
