dex.audit добавлены имплементации и легкое подключение клиента и сервера

--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
@@ -8,10 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Client.Grpc\Dex.Audit.Client.Grpc.csproj" />
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.EF.Interceptors\Dex.Audit.EF.Interceptors.csproj" />
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Logger\Dex.Audit.Logger.csproj" />
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Client.Implementations.Grpc\Dex.Audit.Client.Implementations.Grpc.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Client.Implementations\Dex.Audit.Client.Implementations.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.EF.Interceptors\Dex.Audit.EF.Interceptors.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Logger\Dex.Audit.Logger.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
         <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
         <ProjectReference Include="..\..\Client\Dex.Audit.Client\Dex.Audit.Client.csproj" />
         <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj" />
