--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Server/Dex.Audit.Sample.Server.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\AdditionalLibraries\Dex.Audit.Server.Grpc\Dex.Audit.Server.Grpc.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations.Grpc\Dex.Audit.Server.Implementations.Grpc.csproj" />
         <ProjectReference Include="..\..\Client\Dex.Audit.Client.Abstractions\Dex.Audit.Client.Abstractions.csproj" />
-        <ProjectReference Include="..\..\Dex.Audit.EF.NpgSql\Dex.Audit.EF.NpgSql.csproj" />
+        <ProjectReference Include="..\..\Infrastructure\Dex.Audit.Server.Implementations\Dex.Audit.Server.Implementations.csproj" />
         <ProjectReference Include="..\..\Server\Dex.Audit.Server\Dex.Audit.Server.csproj" />
         <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj" />
     </ItemGroup>
