move IOutboxMessage to Common, delete BaseOutboxMessage (#165)
* move IOutboxMessage to Common

* delete BaseOutboxMessage

* update Dex.Events.Distributed.OutboxExtensions

* set upload-artifact@v4

* set actions/download-artifact@v4

* add dotnet-version

* set codeql-action v3

* set github/codeql-action/upload-sarif@v3

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
           done
 
       # Publish the NuGet package as an artifact, so they can be used in the following jobs
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: nuget
           if-no-files-found: error
@@ -49,7 +49,7 @@ jobs:
         uses: actions/setup-dotnet@v3
 
       # Download the NuGet package created in the previous job
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: nuget
           path: ${{ env.NuGetDirectory }}
@@ -113,6 +113,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            6.0.x
+            8.0.x
       - name: Run tests
         run: |
           find . -name '*.sln' -type f -print0 |
@@ -121,7 +125,7 @@ jobs:
             dotnet test "$solution"
           done
       - name: Upload dotnet test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dotnet-results-${{ matrix.dotnet-version }}
           path: TestResults-${{ matrix.dotnet-version }}
@@ -134,7 +138,7 @@ jobs:
     needs: [ validate_nuget, run_test ]
     steps:
       # Download the NuGet package created in the previous job
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: nuget
           path: ${{ env.NuGetDirectory }}
