Fix folder structure

--- a/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Test.Sender/Dex.ResponseSigning.Test.Sender.csproj
+++ b/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Test.Sender/Dex.ResponseSigning.Test.Sender.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
+    <ProjectReference Include="..\..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
   </ItemGroup>
 
 </Project>
