--- a/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Test.Respondent/Dex.ResponseSigning.Test.Respondent.csproj
+++ b/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Test.Respondent/Dex.ResponseSigning.Test.Respondent.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
+    <ProjectReference Include="..\..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
   </ItemGroup>
 
 </Project>
