--- a/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Tests/Dex.ResponseSigning.Tests.csproj
+++ b/src/Dex.Response.Signing/Tests/Dex.ResponseSigning.Tests/Dex.ResponseSigning.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
+      <ProjectReference Include="..\..\Dex.ResponseSigning\Dex.ResponseSigning.csproj" />
     </ItemGroup>
 
 </Project>
