ubuntu-latest, dotnet-version: 5.0.*

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,22 +17,18 @@ env:
 
 jobs:
   create_nuget:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Get all history to allow automatic versioning using MinVer
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev
-
       # Install the .NET SDK indicated in the global.json file
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '5.0.101'
+          dotnet-version: |
+            5.0.*
 
       - run: |
           for file in $(find . -name "*.sln" -type f); do
@@ -48,19 +44,15 @@ jobs:
           path: ${{ env.NuGetDirectory }}/*.nupkg
 
   validate_nuget:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ create_nuget ]
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev
-
       # Install the .NET SDK indicated in the global.json file
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '5.0.101'
+          dotnet-version: |
+            5.0.*
 
       # Download the NuGet package created in the previous job
       - uses: actions/download-artifact@v4
@@ -82,12 +74,9 @@ jobs:
             echo "validate nuget"
             meziantou.validate-nuget-package "$nuget" --rules AssembliesMustBeOptimized
           done
-  
-  
-  
 
   run_test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres
@@ -125,16 +114,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev
       
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '5.0.101'
+          dotnet-version: |
+            5.0.*
 
       - name: Run tests
         run: |
@@ -154,7 +139,7 @@ jobs:
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/netcore-5'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
       # Download the NuGet package created in the previous job
@@ -167,7 +152,8 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '5.0.101'
+          dotnet-version: |
+            5.0.*
 
       - name: Publish NuGet package
         run: |
